--- a/modules/resource_module/src/main/res/values-ru/strings.xml
+++ b/modules/resource_module/src/main/res/values-ru/strings.xml
@@ -5,4 +5,5 @@
     <string name="navigation_bucket">Корзина</string>
     <string name="navigation_search">Поиск</string>
     <string name="navigation_account">Аккаунт</string>
+    <string name="add_to_cart">Добавить в корзину</string>
 </resources>
