--- a/modules/resource_module/src/main/res/values/strings.xml
+++ b/modules/resource_module/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="navigation_bucket">Cart</string>
     <string name="navigation_search">Search</string>
     <string name="navigation_account">Account</string>
+    <string name="add_to_cart">Add to cart</string>
 </resources>
